WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22368
pauseTransition API doesn't take delay into account
https://bugs.webkit.org/show_bug.cgi?id=22368
Summary
pauseTransition API doesn't take delay into account
Dean Jackson
Reported
2008-11-19 16:18:15 PST
The pauseTransition API currently only applies to the time within the animation, and ignores any delay. The attached patch makes sure delay is taken into account.
Attachments
Patch for delay bug
(3.88 KB, patch)
2008-11-19 16:22 PST
,
Dean Jackson
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2008-11-19 16:22:56 PST
Created
attachment 25289
[details]
Patch for delay bug
Antti Koivisto
Comment 2
2008-11-20 13:59:50 PST
Comment on
attachment 25289
[details]
Patch for delay bug r=me
Simon Fraser (smfr)
Comment 3
2008-11-20 16:44:41 PST
Committed
r38644
M WebCore/ChangeLog M WebCore/page/animation/AnimationBase.cpp M LayoutTests/ChangeLog A LayoutTests/transitions/transition-drt-api-delay.html A LayoutTests/transitions/transition-drt-api-delay-expected.txt
r38644
= 5f535b9ff8b1ca8c0d663916c65b98c37fc629b9 (trunk)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug