2008-11-20  Dean Jackson  <dino@apple.com>

Reviewed by Antti Koivisto

        https://bugs.webkit.org/show_bug.cgi?id=22368

        Make sure pauseTransition API takes transition delay into account.

        Test: transitions/transition-drt-api-delay.html

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::pauseAtTime):

Canonical link: https://commits.webkit.org/30853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38644 268f45cc-cd09-0410-ab3c-d52691b4dbfc